--- a/刮刮乐.html
+++ b/刮刮乐.html
@@ -56,10 +56,10 @@
 
     function setImgUrl() {
       var arr = [
-        "./images/1.jpg",
-        "./images/2.jpg",
-        "./images/3.jpg",
-        "./images/4.jpg"
+        "./image/1.jpg",
+        "./image/2.jpg",
+        "./image/3.jpg",
+        "./image/4.jpg"
       ];
       // 0-3 
       var random = Math.round(Math.random() * 3);
