--- a/制作时钟.html
+++ b/制作时钟.html
@@ -4,7 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>制作时钟</title>
+  <style>
+    body {
+      text-align: center;
+    }
+
+    canvas {
+      margin-top: 100px;
+    }
+  </style>
 </head>
 
 <body>
